@@ -4,7 +4,9 @@
 * Added .hash to selector AST 
 * Added .eql? to LexicalUnits 
 * Added .hash to LexicalUnits 
-* StyleSheet is now the default document handler
+* Added CSS::StyleSheet#to_css
+* Added CSS::StyleSheet#reduce!
+* CSS::StyleSheet is now the default document handler
 
 == 0.1.1
 
